--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Santander Accordance</title>
-    <meta name="description" content="Sitio de Banco Santander Accordance">
+    <meta name="description" content="Sitiooo de Banco Santander Accordance">
     <meta name="keywords" content="Sitio,Banco,Santander,Accordance">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
